# character-counter

./: README.md  docker-compose-servidores.yml  docker-compose.yml  executar-pc1-cliente.bat  executar-pc2-servidores.bat  teste_exato.txt
cliente-gtk/: Dockerfile  Dockerfile-remoto  main_compativel.cpp  main_remoto.cpp
servidor-letras/: CMakeLists.txt  Dockerfile  main.cpp
servidor-mestre/: CMakeLists.txt  Dockerfile  main.cpp
servidor-numeros/: CMakeLists.txt  Dockerfile  main.cpp
